# AzDummy

./: .gitignore  CHANGELOG.md  README.md  azd_settings.toml  pyproject.toml
azdummy/: __init__.py  __main__.py  enums.py  main.py  provider.py  settings.env  settings.py  settings.toml  styles.py
azdummy/commands/: config.py  gen.py
azdummy/core/: typer.py
azdummy/generators/: csv.py  models.py
docs/: commands.md
docs/samples/: azdummy_output_Accounting.csv  azdummy_output_Customer_Service.csv  azdummy_output_Development.csv  azdummy_output_Human_Resources.csv  azdummy_output_IT.csv  azdummy_output_Legal.csv  azdummy_output_Marketing.csv  azdummy_output_Production.csv  azdummy_output_Sales.csv  azdummy_output_Supply.csv  azdummy_output_create.csv  azdummy_output_delete.csv  output_create.csv  output_delete.csv
